[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Enemy/ShootingStarTrap.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemy/ShootingStar.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.6493, 16.7511 )

[node name="ShootingStarTrap" type="Node2D"]
script = ExtResource( 1 )

[node name="trigger" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="trigger"]
shape = SubResource( 1 )

[node name="spawn" type="Position2D" parent="."]

[node name="ShootingStar" parent="spawn" instance=ExtResource( 2 )]

[node name="reset_timer" type="Timer" parent="."]
[connection signal="body_entered" from="trigger" to="." method="_on_trigger_body_entered"]
[connection signal="resetting" from="spawn/ShootingStar" to="." method="_on_ShootingStar_resetting"]
[connection signal="timeout" from="reset_timer" to="." method="_on_reset_timer_timeout"]
